<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ProductDetailAcivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:id="@+id/detail"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24dp"
                android:textColor="@color/white"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/menucart"
                android:src="@drawable/menucart"
                android:layout_marginEnd="10dp"
                android:elevation="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <FrameLayout
                android:id="@+id/framelayout"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_marginStart="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/framebg" />

            </FrameLayout>
            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/prodectname"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/framelayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                app:layout_constraintVertical_bias=".01">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/rating" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/rating"
                    android:textSize="20sp" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivItem"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/barger1"
                app:layout_constraintBottom_toTopOf="@id/product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/linearlayout1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/price"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                />
            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="Description"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_black"
                app:layout_constraintTop_toBottomOf="@id/linearlayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/abouttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="@font/roboto"
                android:text="@string/aboutproduct"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addtocart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_bg"
                android:text="@string/add_to_cart"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/abouttext" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
