<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"

        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CustomCardStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Product Image -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="60dp"
                android:layout_height="81dp"
                android:visibility="invisible"
                android:scaleType="centerCrop" />

            <!-- Reduced Space -->
            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <!-- Product Details -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Jack Daniels Tennessee"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/product_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="$34.99"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Add Button -->
            <LinearLayout
                android:id="@+id/quantity_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"

                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/decrease_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/minus"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/increase_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/plus"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/cardView">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/barger1"
            android:scaleType="fitXY"
            android:id="@+id/bimage"
            android:background="@android:color/transparent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
